<resources>
    <string name="app_name">Aquacontrol</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_broker">MQTT Broker Settings</string>
    <string name="temp">Temperature (ºC)</string>
    <string name="filter">Filter</string>
    <string name="heater">Heater</string>
    <string name="tempmax">Maximum temperature:</string>
    <string name="tempmin">Minimum temperature:</string>
    <string name="aerator">Aerator</string>
    <string name="lamp">Lamp</string>
    <string name="auto_mode">Auto mode</string>
    <string name="prog1">Program 1</string>
    <string name="prog2">Program 2</string>
    <string name="prog3">Program 3</string>
    <string name="version">Version</string>
    <string name="ip">IP</string>
    <string name="active">Active since:</string>
    <string name="lastmsg">Last message: </string>
    <string name="tempmaxhint">30</string>
    <string name="tempminhint">20</string>
    <string name="temppos">TMax</string>
    <string name="select_temp">Please selec temperature:</string>
    <string name="tempalarm">Temperature Alarm on Aquarium</string>
    <string name="tempCurrent">Current temperature </string>
    <string name="templow">ºC is below </string>
    <string name="temphigh">ºC is over </string>
</resources>
