<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:subtitleTextColor="@color/colorSecText"
        app:titleTextColor="@color/colorMainText" />

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTemp"
        android:layout_width="392dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">
        <TextView
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftSpace"
            android:layout_marginStart="@dimen/leftSpace"
            android:gravity="center_vertical"
            android:text="@string/temp"
            android:textColor="@color/colorMainText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="128dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textColor="@color/colorSecText"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearFilter"
        android:layout_width="392dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/spacing"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearTemp">

        <TextView
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftSpace"
            android:layout_marginStart="@dimen/leftSpace"
            android:gravity="center_vertical"
            android:text="@string/filter"
            android:textColor="@color/colorMainText"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/filterSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearAerator"
        android:layout_width="392dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/spacing"
        android:background="@drawable/rounded_corners"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearFilter">

        <TextView
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/leftSpace"
            android:layout_marginStart="@dimen/leftSpace"
            android:gravity="center_vertical"
            android:text="@string/aerator"
            android:textColor="@color/colorMainText"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/aeratorSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableHeater"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAerator">
        <TableRow>
            <TextView
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/heater"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />
            <Switch
                android:id="@+id/heaterSW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/tempmax"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/tempMax"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@color/colorSecText"
                android:inputType="number"
                android:imeOptions="actionSend"
                android:importantForAutofill="no"
                android:hint="@string/tempmaxhint" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="64dp"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/tempmin"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/tempMin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@color/colorSecText"
                android:inputType="number"
                android:imeOptions="actionSend"
                android:importantForAutofill="no"
                android:hint="@string/tempminhint" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLamp"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableHeater">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/lamp"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/lampSW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/auto_mode"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/lampAutoSW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/prog1"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/lampProg1SW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/lampPR1OnTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorSecText"
                android:hint="On" />
            <EditText
                android:id="@+id/lampPR1OffTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorSecText"
                android:hint="Off" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/prog2"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/lampProg2SW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/lampPR2OnTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorSecText"
                android:hint="On" />
            <EditText
                android:id="@+id/lampPR2OffTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorSecText"
                android:hint="Off" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/prog3"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/lampProg3SW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/lampPR3OnTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorSecText"
                android:hint="On" />
            <EditText
                android:id="@+id/lampPR3OffTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:focusableInTouchMode="false"
                android:textColor="@color/colorSecText"
                android:hint="Off" />
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableInfo"
        android:layout_width="392dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:gravity="center_vertical"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLamp">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/version"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Version"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="64dp"
                android:gravity="center_vertical"
                android:text="@string/version"
                android:textColor="@color/colorSecText"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/ip"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/IP"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="64dp"
                android:gravity="center_vertical"
                android:text="@string/ip"
                android:textColor="@color/colorSecText"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/active"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/timeActive"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="64dp"
                android:gravity="center_vertical"
                android:text="@string/active"
                android:textColor="@color/colorSecText"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/leftSpace"
                android:layout_marginStart="@dimen/leftSpace"
                android:gravity="center_vertical"
                android:text="@string/lastmsg"
                android:textColor="@color/colorMainText"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/lastMsg"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="64dp"
                android:gravity="center_vertical"
                android:text="@string/lastmsg"
                android:textColor="@color/colorSecText"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <!--<android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />-->

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="410dp" />

</android.support.constraint.ConstraintLayout>